Change name to mess-markdown-terminal
mess was already taken on global npm namespace

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mess",
+  "name": "mess-markdown-terminal",
   "version": "1.0.0",
   "description": "Print markdown on the terminal",
   "author": "Oliver Schrenk",
