--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "less",
     "terminal"
   ],
-  "dependencies": { "marked": "0.3.5", "marked-terminal": "1.6.1" },
+  "dependencies": {
+    "marked": "0.3.9",
+    "marked-terminal": "1.6.1"
+  },
   "preferGlobal": true,
   "bin": {
     "mess": "index.js"
